# JDC-AX6600-Athena-LED-Controller

./: .gitignore  README.md
.github/workflows/: build-all.yml  build-apk.yml  build-chain.yml  build-ipk.yml  build-rust.yml  ci-check.yml
athena-led/: Cargo.toml  Dockerfile  Makefile  README.md
athena-led/files/: athena_led.config  athena_led.init  find_button.sh
athena-led/scripts/: aarch64-unknown-linux-musl-build.sh
athena-led/src/: button.rs  char_dict.rs  control.rs  led_screen.rs  led_screen_sim.rs  lunar.rs  main.rs  monitor.rs  mqtt.rs  net_agent.rs  scheduler.rs  sun.rs
docs/: DISTRIBUTION.md
luci-app-athena-led/: Makefile  README.md
luci-app-athena-led/htdocs/luci-static/resources/view/athena_led/: settings.js
luci-app-athena-led/luasrc/controller/: athena_led.lua
luci-app-athena-led/luasrc/model/cbi/athena_led/: settings.lua
luci-app-athena-led/po/zh_Hans/: athena_led.po
luci-app-athena-led/root/etc/config/: athena_led
luci-app-athena-led/root/etc/init.d/: athena_led
luci-app-athena-led/root/etc/rc.button/: BTN_0
luci-app-athena-led/root/usr/share/luci/menu.d/: luci-app-athena-led.json
luci-app-athena-led/root/usr/share/rpcd/acl.d/: luci-app-athena-led.json
