[package]
name = "athena-led"
version = "2.5.0"
edition = "2021"
license = "Apache-2.0"

[profile.release]
strip = true      # 自动剥离符号表和调试信息（立竿见影，直接砍掉一半体积）
opt-level = "z"   # 优化目标改为“最小体积”（默认是 "3"，追求最快速度）
lto = true        # 开启跨包链接时优化（Link Time Optimization），能进一步减小体积
codegen-units = 1 # 降低并行编译单元以增加优化时间，换取更小的体积
panic = "abort"   # 遇到严重错误直接退出，不保留庞大的堆栈展开

[dependencies]
# ==========================================
# 🟢 全平台通用依赖 (Windows/Linux 都能跑)
# ==========================================
# 🌟 net feature: 新增 ping 模块 (TCP 连接测延迟) 需要 tokio::net
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "time", "signal", "net"] }
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["serde", "clock", "std"] }
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"                                  
once_cell = "1.18.0"
regex = "1"
# 🌟 [v2.4.0] MQTT 集成 (Home Assistant / 自动化推送消息上屏)
rumqttc = "0.24"

# ==========================================
# 🐧 Linux 专属依赖 (编译给路由器时才用到)
# ==========================================
[target.'cfg(unix)'.dependencies]
# sysfs 后端 (老内核回退用；内核已废弃 sysfs GPIO，仅作兼容)
sysfs_gpio = "0.6.1"
# 🌟 字符设备后端 (/dev/gpiochipN，现代内核标准接口，优先使用)
# 同时启用 uapi v1/v2：v1 兼容 4.x 老内核 (QSDK)，v2 用于 5.10+
gpiocdev = { version = "0.7", features = ["uapi_v1", "uapi_v2"] }


